sfdx/force-app/main/default/objects/Account_Score__c/Account_Score__c.object-meta.xml
<CustomObject>
    <label>Account Score</label>
    <pluralLabel>Account Scores</pluralLabel>
    <nameField><label>Name</label><type>Text</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Deterministic account priority score synced from the Python engine. Flow B creates Tasks from Tier 1 rows.</description>
</CustomObject>