sfdx/force-app/main/default/objects/Account_Score__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Scores</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>