sfdx/force-app/main/default/objects/Account_Score__c/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <label>Account Tier</label>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Tier 1</fullName><default>false</default><label>Tier 1</label></value><value><fullName>Tier 2</fullName><default>false</default><label>Tier 2</label></value><value><fullName>Tier 3</fullName><default>false</default><label>Tier 3</label></value></valueSetDefinition></valueSet>
</CustomField>