sfdx/force-app/main/default/objects/Account_Score__c/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <label>Engagement Score</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>