sfdx/force-app/main/default/objects/Account_Score__c/fields/Firmographic_Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>Firmographic_Fit_Score__c</fullName>
    <label>Firmographic Fit Score</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>