sfdx/force-app/main/default/objects/Account_Score__c/fields/Intent_Score__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score__c</fullName>
    <label>Intent Score</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>