sfdx/force-app/main/default/objects/Account_Score__c/fields/Score_Id__c.field-meta.xml
<CustomField>
    <fullName>Score_Id__c</fullName>
    <label>Score Id</label>
    <type>Text</type>
    <length>60</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>