sfdx/force-app/main/default/objects/Account_Score__c/fields/Scored_At__c.field-meta.xml
<CustomField>
    <fullName>Scored_At__c</fullName>
    <label>Scored At</label>
    <type>DateTime</type>
</CustomField>