sfdx/force-app/main/default/objects/Account_Score__c/fields/Scoring_Reason__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Reason__c</fullName>
    <label>Scoring Reason</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>