sfdx/force-app/main/default/objects/Account_Score__c/fields/Task_Description__c.field-meta.xml
<CustomField>
    <fullName>Task_Description__c</fullName>
    <label>Task Description</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>