sfdx/force-app/main/default/objects/Account_Score__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Priority_Score__c</columns>
    <columns>Account_Tier__c</columns>
    <columns>Intent_Score__c</columns>
    <columns>Usage_Score__c</columns>
    <columns>Engagement_Score__c</columns>
    <columns>Firmographic_Fit_Score__c</columns>
    <columns>Scored_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Account Scores</label>
</ListView>